--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "imap": "^0.8.19",
     "imap-simple": "^5.1.0",
+    "imapflow": "^1.0.164",
     "lodash": "^4.17.21",
     "mailparser": "^3.7.1",
     "nodemailer": "^6.9.14",
